// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls updateTree.js adds one source 1`] = `
"{
  \\"type\\": \\"directory\\",
  \\"name\\": \\"root\\",
  \\"path\\": \\"\\",
  \\"contents\\": [
    {
      \\"type\\": \\"directory\\",
      \\"name\\": \\"FakeThread\\",
      \\"path\\": \\"FakeThread\\",
      \\"contents\\": [
        {
          \\"type\\": \\"directory\\",
          \\"name\\": \\"davidwalsh.name\\",
          \\"path\\": \\"FakeThread/davidwalsh.name\\",
          \\"contents\\": [
            {
              \\"type\\": \\"source\\",
              \\"name\\": \\"(index)\\",
              \\"path\\": \\"https://davidwalsh.name/\\",
              \\"contents\\": {
                \\"id\\": \\"server1.conn13.child1/39\\",
                \\"url\\": \\"https://davidwalsh.name/\\",
                \\"displayURL\\": {
                  \\"path\\": \\"/\\",
                  \\"search\\": \\"\\",
                  \\"group\\": \\"davidwalsh.name\\",
                  \\"filename\\": \\"(index)\\"
                },
                \\"thread\\": \\"FakeThread\\",
                \\"isBlackBoxed\\": false,
                \\"isPrettyPrinted\\": false,
                \\"relativeUrl\\": \\"https://davidwalsh.name/\\",
                \\"isWasm\\": false,
                \\"extensionName\\": null,
                \\"isExtension\\": false,
                \\"isOriginal\\": false,
                \\"parts\\": [
                  {
                    \\"part\\": \\"FakeThread\\",
                    \\"path\\": \\"FakeThread\\",
                    \\"mainThreadHostIfRoot\\": null
                  },
                  {
                    \\"part\\": \\"davidwalsh.name\\",
                    \\"path\\": \\"FakeThread/davidwalsh.name\\",
                    \\"mainThreadHostIfRoot\\": \\"http://www.example.com\\"
                  }
                ]
              }
            },
            {
              \\"type\\": \\"source\\",
              \\"name\\": \\"source1.js\\",
              \\"path\\": \\"FakeThread/davidwalsh.name/source1.js\\",
              \\"contents\\": {
                \\"id\\": \\"server1.conn13.child1/37\\",
                \\"url\\": \\"https://davidwalsh.name/source1.js\\",
                \\"displayURL\\": {
                  \\"path\\": \\"/source1.js\\",
                  \\"search\\": \\"\\",
                  \\"group\\": \\"davidwalsh.name\\",
                  \\"filename\\": \\"source1.js\\"
                },
                \\"thread\\": \\"FakeThread\\",
                \\"isBlackBoxed\\": false,
                \\"isPrettyPrinted\\": false,
                \\"relativeUrl\\": \\"https://davidwalsh.name/source1.js\\",
                \\"isWasm\\": false,
                \\"extensionName\\": null,
                \\"isExtension\\": false,
                \\"isOriginal\\": false,
                \\"parts\\": [
                  {
                    \\"part\\": \\"FakeThread\\",
                    \\"path\\": \\"FakeThread\\",
                    \\"mainThreadHostIfRoot\\": null
                  },
                  {
                    \\"part\\": \\"davidwalsh.name\\",
                    \\"path\\": \\"FakeThread/davidwalsh.name\\",
                    \\"mainThreadHostIfRoot\\": \\"http://www.example.com\\"
                  },
                  {
                    \\"part\\": \\"source1.js\\",
                    \\"path\\": \\"FakeThread/davidwalsh.name/source1.js\\",
                    \\"mainThreadHostIfRoot\\": null
                  }
                ]
              }
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`calls updateTree.js adds two sources 1`] = `
"{
  \\"type\\": \\"directory\\",
  \\"name\\": \\"root\\",
  \\"path\\": \\"\\",
  \\"contents\\": [
    {
      \\"type\\": \\"directory\\",
      \\"name\\": \\"FakeThread\\",
      \\"path\\": \\"FakeThread\\",
      \\"contents\\": [
        {
          \\"type\\": \\"directory\\",
          \\"name\\": \\"davidwalsh.name\\",
          \\"path\\": \\"FakeThread/davidwalsh.name\\",
          \\"contents\\": [
            {
              \\"type\\": \\"source\\",
              \\"name\\": \\"(index)\\",
              \\"path\\": \\"https://davidwalsh.name/\\",
              \\"contents\\": {
                \\"id\\": \\"server1.conn13.child1/39\\",
                \\"url\\": \\"https://davidwalsh.name/\\",
                \\"displayURL\\": {
                  \\"path\\": \\"/\\",
                  \\"search\\": \\"\\",
                  \\"group\\": \\"davidwalsh.name\\",
                  \\"filename\\": \\"(index)\\"
                },
                \\"thread\\": \\"FakeThread\\",
                \\"isBlackBoxed\\": false,
                \\"isPrettyPrinted\\": false,
                \\"relativeUrl\\": \\"https://davidwalsh.name/\\",
                \\"isWasm\\": false,
                \\"extensionName\\": null,
                \\"isExtension\\": false,
                \\"isOriginal\\": false,
                \\"parts\\": [
                  {
                    \\"part\\": \\"FakeThread\\",
                    \\"path\\": \\"FakeThread\\",
                    \\"mainThreadHostIfRoot\\": null
                  },
                  {
                    \\"part\\": \\"davidwalsh.name\\",
                    \\"path\\": \\"FakeThread/davidwalsh.name\\",
                    \\"mainThreadHostIfRoot\\": \\"http://www.example.com\\"
                  }
                ]
              }
            },
            {
              \\"type\\": \\"source\\",
              \\"name\\": \\"source1.js\\",
              \\"path\\": \\"FakeThread/davidwalsh.name/source1.js\\",
              \\"contents\\": {
                \\"id\\": \\"server1.conn13.child1/37\\",
                \\"url\\": \\"https://davidwalsh.name/source1.js\\",
                \\"displayURL\\": {
                  \\"path\\": \\"/source1.js\\",
                  \\"search\\": \\"\\",
                  \\"group\\": \\"davidwalsh.name\\",
                  \\"filename\\": \\"source1.js\\"
                },
                \\"thread\\": \\"FakeThread\\",
                \\"isBlackBoxed\\": false,
                \\"isPrettyPrinted\\": false,
                \\"relativeUrl\\": \\"https://davidwalsh.name/source1.js\\",
                \\"isWasm\\": false,
                \\"extensionName\\": null,
                \\"isExtension\\": false,
                \\"isOriginal\\": false,
                \\"parts\\": [
                  {
                    \\"part\\": \\"FakeThread\\",
                    \\"path\\": \\"FakeThread\\",
                    \\"mainThreadHostIfRoot\\": null
                  },
                  {
                    \\"part\\": \\"davidwalsh.name\\",
                    \\"path\\": \\"FakeThread/davidwalsh.name\\",
                    \\"mainThreadHostIfRoot\\": \\"http://www.example.com\\"
                  },
                  {
                    \\"part\\": \\"source1.js\\",
                    \\"path\\": \\"FakeThread/davidwalsh.name/source1.js\\",
                    \\"mainThreadHostIfRoot\\": null
                  }
                ]
              }
            },
            {
              \\"type\\": \\"source\\",
              \\"name\\": \\"source2.js\\",
              \\"path\\": \\"FakeThread/davidwalsh.name/source2.js\\",
              \\"contents\\": {
                \\"id\\": \\"server1.conn13.child1/40\\",
                \\"url\\": \\"https://davidwalsh.name/source2.js\\",
                \\"displayURL\\": {
                  \\"path\\": \\"/source2.js\\",
                  \\"search\\": \\"\\",
                  \\"group\\": \\"davidwalsh.name\\",
                  \\"filename\\": \\"source2.js\\"
                },
                \\"thread\\": \\"FakeThread\\",
                \\"isBlackBoxed\\": false,
                \\"isPrettyPrinted\\": false,
                \\"relativeUrl\\": \\"https://davidwalsh.name/source2.js\\",
                \\"isWasm\\": false,
                \\"extensionName\\": null,
                \\"isExtension\\": false,
                \\"isOriginal\\": false,
                \\"parts\\": [
                  {
                    \\"part\\": \\"FakeThread\\",
                    \\"path\\": \\"FakeThread\\",
                    \\"mainThreadHostIfRoot\\": null
                  },
                  {
                    \\"part\\": \\"davidwalsh.name\\",
                    \\"path\\": \\"FakeThread/davidwalsh.name\\",
                    \\"mainThreadHostIfRoot\\": \\"http://www.example.com\\"
                  },
                  {
                    \\"part\\": \\"source2.js\\",
                    \\"path\\": \\"FakeThread/davidwalsh.name/source2.js\\",
                    \\"mainThreadHostIfRoot\\": null
                  }
                ]
              }
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`calls updateTree.js shows all the sources 1`] = `
"{
  \\"type\\": \\"directory\\",
  \\"name\\": \\"root\\",
  \\"path\\": \\"\\",
  \\"contents\\": [
    {
      \\"type\\": \\"directory\\",
      \\"name\\": \\"FakeThread\\",
      \\"path\\": \\"FakeThread\\",
      \\"contents\\": [
        {
          \\"type\\": \\"directory\\",
          \\"name\\": \\"davidwalsh.name\\",
          \\"path\\": \\"FakeThread/davidwalsh.name\\",
          \\"contents\\": [
            {
              \\"type\\": \\"source\\",
              \\"name\\": \\"(index)\\",
              \\"path\\": \\"https://davidwalsh.name/\\",
              \\"contents\\": {
                \\"id\\": \\"server1.conn13.child1/39\\",
                \\"url\\": \\"https://davidwalsh.name/\\",
                \\"displayURL\\": {
                  \\"path\\": \\"/\\",
                  \\"search\\": \\"\\",
                  \\"group\\": \\"davidwalsh.name\\",
                  \\"filename\\": \\"(index)\\"
                },
                \\"thread\\": \\"FakeThread\\",
                \\"isBlackBoxed\\": false,
                \\"isPrettyPrinted\\": false,
                \\"relativeUrl\\": \\"https://davidwalsh.name/\\",
                \\"isWasm\\": false,
                \\"extensionName\\": null,
                \\"isExtension\\": false,
                \\"isOriginal\\": false,
                \\"parts\\": [
                  {
                    \\"part\\": \\"FakeThread\\",
                    \\"path\\": \\"FakeThread\\",
                    \\"mainThreadHostIfRoot\\": null
                  },
                  {
                    \\"part\\": \\"davidwalsh.name\\",
                    \\"path\\": \\"FakeThread/davidwalsh.name\\",
                    \\"mainThreadHostIfRoot\\": \\"http://www.example.com\\"
                  }
                ]
              }
            },
            {
              \\"type\\": \\"source\\",
              \\"name\\": \\"source1.js\\",
              \\"path\\": \\"FakeThread/davidwalsh.name/source1.js\\",
              \\"contents\\": {
                \\"id\\": \\"server1.conn13.child1/37\\",
                \\"url\\": \\"https://davidwalsh.name/source1.js\\",
                \\"displayURL\\": {
                  \\"path\\": \\"/source1.js\\",
                  \\"search\\": \\"\\",
                  \\"group\\": \\"davidwalsh.name\\",
                  \\"filename\\": \\"source1.js\\"
                },
                \\"thread\\": \\"FakeThread\\",
                \\"isBlackBoxed\\": false,
                \\"isPrettyPrinted\\": false,
                \\"relativeUrl\\": \\"https://davidwalsh.name/source1.js\\",
                \\"isWasm\\": false,
                \\"extensionName\\": null,
                \\"isExtension\\": false,
                \\"isOriginal\\": false,
                \\"parts\\": [
                  {
                    \\"part\\": \\"FakeThread\\",
                    \\"path\\": \\"FakeThread\\",
                    \\"mainThreadHostIfRoot\\": null
                  },
                  {
                    \\"part\\": \\"davidwalsh.name\\",
                    \\"path\\": \\"FakeThread/davidwalsh.name\\",
                    \\"mainThreadHostIfRoot\\": \\"http://www.example.com\\"
                  },
                  {
                    \\"part\\": \\"source1.js\\",
                    \\"path\\": \\"FakeThread/davidwalsh.name/source1.js\\",
                    \\"mainThreadHostIfRoot\\": null
                  }
                ]
              }
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`calls updateTree.js update sources that change their display URL 1`] = `
"{
  \\"type\\": \\"directory\\",
  \\"name\\": \\"root\\",
  \\"path\\": \\"\\",
  \\"contents\\": [
    {
      \\"type\\": \\"directory\\",
      \\"name\\": \\"FakeThread\\",
      \\"path\\": \\"FakeThread\\",
      \\"contents\\": [
        {
          \\"type\\": \\"directory\\",
          \\"name\\": \\"davidwalsh.name\\",
          \\"path\\": \\"FakeThread/davidwalsh.name\\",
          \\"contents\\": [
            {
              \\"type\\": \\"source\\",
              \\"name\\": \\"?param\\",
              \\"path\\": \\"FakeThread/davidwalsh.name/?param\\",
              \\"contents\\": {
                \\"id\\": \\"server1.conn13.child1/39\\",
                \\"url\\": \\"https://davidwalsh.name/?param\\",
                \\"displayURL\\": {
                  \\"path\\": \\"/\\",
                  \\"search\\": \\"?param\\",
                  \\"group\\": \\"davidwalsh.name\\",
                  \\"filename\\": \\"(index)\\"
                },
                \\"thread\\": \\"FakeThread\\",
                \\"isBlackBoxed\\": false,
                \\"isPrettyPrinted\\": false,
                \\"relativeUrl\\": \\"https://davidwalsh.name/?param\\",
                \\"isWasm\\": false,
                \\"extensionName\\": null,
                \\"isExtension\\": false,
                \\"isOriginal\\": false,
                \\"parts\\": [
                  {
                    \\"part\\": \\"FakeThread\\",
                    \\"path\\": \\"FakeThread\\",
                    \\"mainThreadHostIfRoot\\": null
                  },
                  {
                    \\"part\\": \\"davidwalsh.name\\",
                    \\"path\\": \\"FakeThread/davidwalsh.name\\",
                    \\"mainThreadHostIfRoot\\": \\"http://www.example.com\\"
                  },
                  {
                    \\"part\\": \\"?param\\",
                    \\"path\\": \\"FakeThread/davidwalsh.name/?param\\",
                    \\"mainThreadHostIfRoot\\": null
                  }
                ]
              }
            }
          ]
        }
      ]
    }
  ]
}"
`;
